# Side-Project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  htp_analyzer.py
.github/workflows/: build-push.yaml  build-push.yml  ci.local.yml  ci.yml
app/: .gitignore  Dockerfile  README.md  api.py  database.py  dependencies.py  main.py  pyproject.toml  requirements.txt
app/models/: house_func.py  house_model.py  person_func.py  person_model.py  tree_func.py  tree_model.py
backend/: api.py  config.py  database.py  dependencies.py  htp_analyzer.py  main.py
backend/model/: dataset.py
database/: db_to_sql.py  house_meta.db  json_to_db.py  schema.sql
docs/: github_label.json
fastapi/: api.py  config.py  database.py  dependencies.py  main.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Drawing.tsx  Home.tsx  Result.tsx  Selection.tsx
frontend/src/services/: api.ts
frontend/src/styles/pages/: drawing.css
re_flex/: main.py
reflex/: README.md  main.py  options_ui.py  style.py
reflex/.web/: reflex.json
tools/: house_func.py  htp_analyzer.py  htp_analyzer_ollama.py  json_to_sentence.py  person_func.py  tree_func.py  vis_train.py
yolov8/: inference.py  train.py
